Enhance Stroke Prediction Project Documentation and Code
- Updated README.md to provide a comprehensive overview of the Stroke Prediction project, including pipeline architecture, dataset details, installation instructions, model performance metrics, and ethical considerations.
- Modified the Jupyter notebook (Stroke_Prediction_Tech_Challenge.ipynb) to reflect updated execution counts and added error handling for prediction functions.
- Added FastAPI deployment example in the Jupyter notebook for serving the model as an API.
- Updated requirements.txt to ensure all necessary dependencies are included for the project.

--- a/Stroke_Prediction_Tech_Challenge.ipynb
+++ b/Stroke_Prediction_Tech_Challenge.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "cf599b2e",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "c4d3e9c9",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
          "type": "integer"
         }
        ],
-       "ref": "b5ed4d09-8928-45c3-8981-0a1b4470053e",
+       "ref": "2df8a0d4-69f2-4f66-bfba-730dbdc75683",
        "rows": [
         [
          "0",
@@ -443,7 +443,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "7ed0f4c7",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "  'stroke'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "24a74062",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "aa8bb4f3-138e-4e79-a258-e4c17d26f6b3",
+       "ref": "fa2a63ab-7205-48fa-a27c-0ce3f8797bda",
        "rows": [
         [
          "id",
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "bb558579",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "6158f780",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "3e63e633",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1311,7 @@
          "type": "float"
         }
        ],
-       "ref": "27be193f-898f-4797-9846-b3ee1d33d64a",
+       "ref": "d82a2e45-688c-45f1-93d2-a647314d7709",
        "rows": [
         [
          "Male",
@@ -1413,7 +1413,7 @@
          "type": "float"
         }
        ],
-       "ref": "efcf93c8-50be-477c-b3ad-239823a6755f",
+       "ref": "4bd25ee0-54e3-42dc-950e-cd9fd1fdbc5d",
        "rows": [
         [
          "Yes",
@@ -1504,7 +1504,7 @@
          "type": "float"
         }
        ],
-       "ref": "b6a6dcdb-bc4c-49c7-a634-964b77176602",
+       "ref": "c5bd7894-d9b7-41d5-a016-8db5b76156ce",
        "rows": [
         [
          "Self-employed",
@@ -1628,7 +1628,7 @@
          "type": "float"
         }
        ],
-       "ref": "8e5f3ed7-38e9-4fe7-b09a-d3160bef08c7",
+       "ref": "94aaeab6-7be9-4f54-a36e-a8e88a9bc822",
        "rows": [
         [
          "Urban",
@@ -1719,7 +1719,7 @@
          "type": "float"
         }
        ],
-       "ref": "8d3ee283-1a09-4e0f-866e-f8e116350dff",
+       "ref": "aa886875-d5e1-42e1-824b-90864fe27df0",
        "rows": [
         [
          "formerly smoked",
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "6872e30b",
    "metadata": {},
    "outputs": [
@@ -1882,7 +1882,7 @@
          "type": "float"
         }
        ],
-       "ref": "c55e18c4-54a8-4790-8b6b-c0630f0da7d6",
+       "ref": "96799f6a-cdb9-4275-a123-8f0e40dbb20d",
        "rows": [
         [
          "stroke",
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "9c800fa9",
    "metadata": {},
    "outputs": [
@@ -2166,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "c132710a",
    "metadata": {},
    "outputs": [
@@ -2277,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "e364ba9f",
    "metadata": {},
    "outputs": [
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "2ebd5ec2",
    "metadata": {},
    "outputs": [
@@ -2367,7 +2367,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Estratégia 2: recall mínimo de 0.60 + maior precisão possível\u001b[39;00m\n\u001b[32m     11\u001b[39m mask = rec >= \u001b[32m0.60\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m best_thr_recall = \u001b[43mthr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmask\u001b[49m\u001b[43m]\u001b[49m[np.argmax(prec[mask])] \u001b[38;5;28;01mif\u001b[39;00m np.any(mask) \u001b[38;5;28;01melse\u001b[39;00m best_thr_f1\n\u001b[32m     14\u001b[39m best_thr = \u001b[38;5;28mfloat\u001b[39m(best_thr_recall)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mThreshold (F1):\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28mround\u001b[39m(\u001b[38;5;28mfloat\u001b[39m(best_thr_f1), \u001b[32m4\u001b[39m))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Estratégia 2: recall mínimo de 0.60 + maior precisão possível\u001b[39;00m\n\u001b[32m     11\u001b[39m mask = rec >= \u001b[32m0.60\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m best_thr_recall = \u001b[43mthr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmask\u001b[49m\u001b[43m]\u001b[49m[np.argmax(prec[mask])] \u001b[38;5;28;01mif\u001b[39;00m np.any(mask) \u001b[38;5;28;01melse\u001b[39;00m best_thr_f1\n\u001b[32m     14\u001b[39m best_thr = \u001b[38;5;28mfloat\u001b[39m(best_thr_recall)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mThreshold (F1):\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28mround\u001b[39m(\u001b[38;5;28mfloat\u001b[39m(best_thr_f1), \u001b[32m4\u001b[39m))\n",
       "\u001b[31mIndexError\u001b[39m: boolean index did not match indexed array along axis 0; size of axis is 766 but size of corresponding boolean axis is 767"
      ]
     }
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "44e825ab",
    "metadata": {},
    "outputs": [
@@ -2414,7 +2414,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     11\u001b[39m     \u001b[38;5;66;03m# fallback: índices\u001b[39;00m\n\u001b[32m     12\u001b[39m     feat_names = [\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mfeat_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(result.importances_mean))]\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m imp_series = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSeries\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m.\u001b[49m\u001b[43mimportances_mean\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfeat_names\u001b[49m\u001b[43m)\u001b[49m.sort_values(ascending=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m     15\u001b[39m display(imp_series.head(\u001b[32m15\u001b[39m))\n\u001b[32m     17\u001b[39m plt.figure(figsize=(\u001b[32m8\u001b[39m,\u001b[32m5\u001b[39m))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     11\u001b[39m     \u001b[38;5;66;03m# fallback: índices\u001b[39;00m\n\u001b[32m     12\u001b[39m     feat_names = [\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mfeat_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(result.importances_mean))]\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m imp_series = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSeries\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m.\u001b[49m\u001b[43mimportances_mean\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfeat_names\u001b[49m\u001b[43m)\u001b[49m.sort_values(ascending=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m     15\u001b[39m display(imp_series.head(\u001b[32m15\u001b[39m))\n\u001b[32m     17\u001b[39m plt.figure(figsize=(\u001b[32m8\u001b[39m,\u001b[32m5\u001b[39m))\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\argus\\workspace\\StrokePrediction\\.venv\\Lib\\site-packages\\pandas\\core\\series.py:578\u001b[39m, in \u001b[36mSeries.__init__\u001b[39m\u001b[34m(self, data, index, dtype, name, copy, fastpath)\u001b[39m\n\u001b[32m    576\u001b[39m     index = default_index(\u001b[38;5;28mlen\u001b[39m(data))\n\u001b[32m    577\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m is_list_like(data):\n\u001b[32m--> \u001b[39m\u001b[32m578\u001b[39m     \u001b[43mcom\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrequire_length_match\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    580\u001b[39m \u001b[38;5;66;03m# create/copy the manager\u001b[39;00m\n\u001b[32m    581\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, (SingleBlockManager, SingleArrayManager)):\n",
       "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\argus\\workspace\\StrokePrediction\\.venv\\Lib\\site-packages\\pandas\\core\\common.py:573\u001b[39m, in \u001b[36mrequire_length_match\u001b[39m\u001b[34m(data, index)\u001b[39m\n\u001b[32m    569\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    570\u001b[39m \u001b[33;03mCheck the length of data matches the length of the index.\u001b[39;00m\n\u001b[32m    571\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    572\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) != \u001b[38;5;28mlen\u001b[39m(index):\n\u001b[32m--> \u001b[39m\u001b[32m573\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    574\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mLength of values \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    575\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(data)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m) \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    576\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mdoes not match length of index \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    577\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(index)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m)\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    578\u001b[39m     )\n",
       "\u001b[31mValueError\u001b[39m: Length of values (10) does not match length of index (21)"
@@ -2550,10 +2550,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "ef6c93ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'best_thr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[31]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Exemplo (ajuste os valores conforme necessário):\u001b[39;00m\n\u001b[32m     18\u001b[39m example = {\n\u001b[32m     19\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mgender\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mMale\u001b[39m\u001b[33m\"\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mage\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m67\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mhypertension\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m1\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mheart_disease\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m1\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mever_married\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mYes\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     20\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mwork_type\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mPrivate\u001b[39m\u001b[33m\"\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mResidence_type\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mUrban\u001b[39m\u001b[33m\"\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mavg_glucose_level\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m205.0\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33mbmi\u001b[39m\u001b[33m\"\u001b[39m:\u001b[32m27.5\u001b[39m,\u001b[33m\"\u001b[39m\u001b[33msmoking_status\u001b[39m\u001b[33m\"\u001b[39m:\u001b[33m\"\u001b[39m\u001b[33mformerly smoked\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     21\u001b[39m }\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m predict_stroke(example, model=best_model, threshold=\u001b[43mbest_thr\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'best_thr' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Função de inferência (exemplo)\n",
@@ -2590,10 +2602,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "1edb4ca1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "from fastapi import FastAPI\n",
+      "import joblib, json, pandas as pd\n",
+      "\n",
+      "app = FastAPI(title=\"Stroke Prediction API\", version=\"1.0.0\")\n",
+      "\n",
+      "MODEL_PATH = \"models/stroke_model.joblib\"\n",
+      "META_PATH  = \"models/artifact.json\"\n",
+      "\n",
+      "model = joblib.load(MODEL_PATH)\n",
+      "meta  = json.load(open(META_PATH))\n",
+      "threshold = float(meta.get(\"threshold\", 0.5))\n",
+      "features  = meta.get(\"features\")\n",
+      "\n",
+      "@app.get(\"/health\")\n",
+      "def health():\n",
+      "    return {\"status\":\"ok\"}\n",
+      "\n",
+      "@app.post(\"/predict\")\n",
+      "def predict(payload: dict):\n",
+      "    import pandas as pd\n",
+      "    x = pd.DataFrame([payload])[features]\n",
+      "    proba = model.predict_proba(x)[:,1][0]\n",
+      "    pred  = int(proba >= threshold)\n",
+      "    return {\"probability\": float(proba), \"prediction\": pred, \"threshold\": threshold}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Para usar: salve este conteúdo como fastapi_app.py e rode: uvicorn fastapi_app:app --reload\n",
